# ProyectoBMC1-MapasCromosomicos

./: .anjuta_sym_db.db  .gitignore  AUTHORS  Makefile  Makefile.in  README  README.md  config.status  configure  configure.ac  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  mapascromosomicos
Debug/src/.deps/: main.Po  mapascromosomicos.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: generador_de_mapas_cromosomicos.aux  generador_de_mapas_cromosomicos.bbl  generador_de_mapas_cromosomicos.blg  generador_de_mapas_cromosomicos.tex  generador_de_mapas_cromosomicos.toc  refs.bib  title_page.aux  title_page.tex
po/: Makefile  Makefile.in
src/: Algoritmo.c  Algoritmo.h  GenomeToolsSupport.c  GenomeToolsSupport.h  IntList.c  IntList.h  Makefile  Makefile.am  Makefile.in  default.style  gridview.c  gridview.c~  main.c  main.c~  mapascromosomicos  mapascromosomicos.c  mapascromosomicos.callbacks.c  mapascromosomicos.callbacks.c~  mapascromosomicos.c~  mapascromosomicos.h  mapascromosomicos.h~  mapascromosomicos.signals.c~  mapascromosomicos.ui  mapascromosomicos.ui~
src/.deps/: Algoritmo.Po  IntList.Po  gridview.Po  main.Po  mapascromosomicos-Algoritmo.Po  mapascromosomicos-GenomeToolsSupport.Po  mapascromosomicos-IntList.Po  mapascromosomicos-gridview.Po  mapascromosomicos-main.Po  mapascromosomicos-mapascromosomicos.Po  mapascromosomicos-mapascromosomicos.callbacks.Po  mapascromosomicos.Po  mapascromosomicos.callbacks.Po  mapascromosomicos.signals.Po
